# logical_calcule

./: CMakeLists.txt  logical.c  logical.h  main.c  readme.md
